fixed footer on tablet

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -14,10 +14,12 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
   }
 
   .title, .title-mobile {
     float: left;
+    margin: 1% 0%;
   }
   
   .title-mobile {
@@ -28,6 +30,7 @@ footer {
     display: inline-block;
     font-size: 0;
     float: right;
+    margin: 1% 0%;
 
     li {
       display: inline-block;
